--- a/app/views/statement/_filterable_list.html.erb
+++ b/app/views/statement/_filterable_list.html.erb
@@ -9,6 +9,7 @@
 >
   <h2>Ověřené faktické výroky</h2>
 
+  <% if false # TODO: remove when infoboxes texts are ready %>
   <div class="infoboxes-list">
     <div class="infobox-item">
       <%= render(partial: "shared/infobox", locals: { topic: :choosing_statements, id: "statement-filterable-list-choosing-statements" }) %>
@@ -19,6 +20,7 @@
       </div>
     <% end %>
   </div>
+  <% end %>
 
   <form class="filters-list">
     <div class="filter-item">
