--- a/app/views/statement/_filterable_list.html.erb
+++ b/app/views/statement/_filterable_list.html.erb
@@ -7,7 +7,7 @@
   data-controller="statement--filterable-list"
   data-action="popstate@window->statement--filterable-list#handleWindowPopstate"
 >
-  <h2>Ověřené faktické výroky</h2>
+  <h2>Výroky</h2>
 
   <% if false # TODO: remove when infoboxes texts are ready %>
   <div class="infoboxes-list">
