New speaker page

--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -39,6 +39,7 @@
 @import "speaker/show";
 
 @import "statement/detail";
+@import "statement/elastic_filterable_list";
 @import "statement/filterable_list";
 @import "statement/show";
 @import "statement/show_preview";
