--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, @statement.speaker.full_name + ': ' + "„#{@statement.content}“".truncate(45)) %>
+<% content_for(:title, @statement.source_speaker.full_name + (@statement.source_speaker.body ? " (#{@statement.source_speaker.body.short_name})" : "") + ': ' + "„#{@statement.content}“".truncate(45)) %>
 <% content_for(:description, 'Tento výrok byl ověřen jako ' + @statement.approved_assessment.veracity.name) %>
 <% content_for(:image_src, @statement.preview_image.attached? ? polymorphic_url(@statement.preview_image) : nil) %>
 
@@ -7,7 +7,7 @@
   data-controller="statement--show"
   data-action="resize@window->statement--show#handleWindowResize"
 >
-  <a href="<%= speaker_path(@statement.speaker.id) %>" class="speaker">
+  <a href="<%= speaker_path(@statement.speaker) %>" class="speaker">
     <%= render(partial: 'shared/portrait', object: @statement.speaker, as: :speaker) %>
     <div class="name-and-role">
       <div class="name">
