--- a/app/views/statement/_small.html.erb
+++ b/app/views/statement/_small.html.erb
@@ -4,7 +4,7 @@
   <div>
     <p class="name">
       <span class="veracity <%= statement.approved_assessment.veracity.default_name %>"></span>
-      <a href="<%= speaker_path(statement.speaker.id) %>">
+      <a href="<%= speaker_path(statement.speaker) %>">
         <%= statement.speaker.full_name %>
       </a>
     </p>
