All statements browsing

--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -41,5 +41,6 @@
 @import "statement/detail";
 @import "statement/elastic_filterable_list";
 @import "statement/filterable_list";
+@import "statement/index";
 @import "statement/show";
 @import "statement/show_preview";
