--- a/app/assets/stylesheets/statement/_elastic_filterable_list.scss
+++ b/app/assets/stylesheets/statement/_elastic_filterable_list.scss
@@ -34,7 +34,7 @@
     background: white image-url('select-arrow-icon.png') 198px 15px no-repeat;
     border: 1px solid #C5BCE0;
     border-radius: 5px;
-    padding: 8px 12px;
+    padding: 8px 24px 8px 12px;
     font-family: var(--font-family);
     font-size: var(--normal-typesize);
     line-height: 1.2;
