--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:image_src, @slug == "druha-vlada-andreje-babise" ? asset_url("vladni-sliby-og-image.png") : nil) %>
+<% content_for(:image_src, asset_url("vladni-sliby-logo.svg") : nil) %>
 
 <article
   class="container-promises-overview"
