--- a/app/views/speaker/index.html.erb
+++ b/app/views/speaker/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:title, "Přehled politiků a političek") %>
+<% content_for(:description, "Za svou existenci Demagog.cz už ověřil výroky stovek politiků a političek.") %>
+
 <div class="container-speaker-index">
   <article class="speakers">
     <% if @party  %>
