--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -23,14 +23,14 @@
     description: :description,
     type: 'article',
     url: url_for(:only_path => false),
-    image: :image_src,
+    image: content_for?(:image_src) ? yield(:image_src) : asset_path('default-meta-image.png'),
     author: :author
   },
   twitter: {
-    card: 'summary_large_image',
+    card: content_for?(:twitter_card) ? yield(:twitter_card) : 'summary',
     site: '@DemagogCZ',
-    title: :title,
-    description: :description,
-    image: :image_src
+    title: content_for?(:title) ? yield(:title) : 'Demagog.cz — Factcheck politických diskuzí',
+    description: content_for?(:description) ? yield(:description) : 'Nezávislý factcheckingový projekt, který se zaměřuje na ověřování faktických tvrzení českých politiků. Usilujeme o kultivaci veřejné diskuse a klademe důraz na transparentní zdroje informací, kritické myšlení a mediální gramotnost.',
+    image: content_for?(:image_src) ? yield(:image_src) : asset_path('default-meta-image.png')
   }
 %>
