--- a/app/views/statement/index.html.erb
+++ b/app/views/statement/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:title, "Přehled ověřených výroků") %>
+<% content_for(:description, "Za svou existenci Demagog.cz už ověřil tisíce výroků politiků a političek. V následujícím rozhraní můžete výroky volně procházet.") %>
+
 <article class="container-statement-index">
   <section class="statements-intro">
     <h1>Přehled ověřených výroků</h1>
