--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, "Vyhledávání" + (@query.empty? ? '' : ": #{@query}")) %>
-<% content_for(:description, "Hledejte mezi výstupy Demagog.cz, konkrétními faktickými výroky či v databázi politiků a političek")) %>
+<% content_for(:description, "Hledejte mezi výstupy Demagog.cz, konkrétními faktickými výroky či v databázi politiků a političek") %>
 
 <div class="container-search-index">
   <%= form_tag search_path, method: :get, class: "search-box" do %>
