Typo and absolute urls

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:image_src, asset_url("vladni-sliby-logo.svg") : nil) %>
+<% content_for(:image_src, asset_url("vladni-sliby-logo.svg")) %>
 
 <article
   class="container-promises-overview"
