--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -18,9 +18,9 @@
     { href: asset_url('apple-touch-icon.png'), rel: 'apple-touch-icon-precomposed', sizes: '114x114', type: 'image/png' },
   ],
   og: {
-    title: :title,
+    title: content_for?(:title) ? yield(:title) + " — Demagog.cz" : 'Demagog.cz — Factcheck politických diskuzí',
     site_name: :site,
-    description: :description,
+    description: content_for?(:description) ? yield(:description) : 'Nezávislý factcheckingový projekt, který se zaměřuje na ověřování faktických tvrzení českých politiků. Usilujeme o kultivaci veřejné diskuse a klademe důraz na transparentní zdroje informací, kritické myšlení a mediální gramotnost.',
     type: 'article',
     url: url_for(:only_path => false),
     image: content_for?(:image_src) ? yield(:image_src) : asset_url('default-meta-image.png'),
@@ -29,7 +29,7 @@
   twitter: {
     card: content_for?(:twitter_card) ? yield(:twitter_card) : 'summary',
     site: '@DemagogCZ',
-    title: content_for?(:title) ? yield(:title) : 'Demagog.cz — Factcheck politických diskuzí',
+    title: content_for?(:title) ? yield(:title) + " — Demagog.cz" : 'Demagog.cz — Factcheck politických diskuzí',
     description: content_for?(:description) ? yield(:description) : 'Nezávislý factcheckingový projekt, který se zaměřuje na ověřování faktických tvrzení českých politiků. Usilujeme o kultivaci veřejné diskuse a klademe důraz na transparentní zdroje informací, kritické myšlení a mediální gramotnost.',
     image: content_for?(:image_src) ? yield(:image_src) : asset_url('default-meta-image.png')
   }
