Using newer gtag script

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <% unless Rails.env.test? %>
       <%= javascript_pack_tag 'application'  %>
       <%= javascript_pack_tag 'widget'  %>
-      <%= render partial: "shared/ga" %>
+      <%= render partial: "shared/google_analytics" %>
     <% end %>
   </body>
 </html>
