--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -11,6 +11,6 @@
     <%= yield %>
 
     <%= javascript_pack_tag 'application'  %>
-    <%= render partial: "shared/ga" %>
+    <%= render partial: "shared/google_analytics" %>
   </body>
 </html>
