--- a/app/views/layouts/empty.html.erb
+++ b/app/views/layouts/empty.html.erb
@@ -12,6 +12,6 @@
 
     <%= javascript_pack_tag 'application'  %>
     <%= javascript_pack_tag 'widget'  %>
-    <%= render partial: "shared/ga" %>
+    <%= render partial: "shared/google_analytics" %>
   </body>
 </html>
