--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -27,7 +27,9 @@
 
 @import "search/index";
 
+@import "shared/cookies_banner";
 @import "shared/donate_and_subscribe";
+@import "shared/footer";
 @import "shared/infobox";
 @import "shared/nav";
 @import "shared/partners";
