--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       <%= javascript_pack_tag 'application'  %>
       <%= javascript_pack_tag 'widget'  %>
       <%= render partial: "shared/google_analytics" %>
+      <%= render partial: "shared/cookies_banner" %>
     <% end %>
   </body>
 </html>
