--- a/app/views/shared/_cookies_banner.html.erb
+++ b/app/views/shared/_cookies_banner.html.erb
@@ -4,7 +4,7 @@
   <div class="container-shared-cookies_banner" data-controller="shared--cookies-banner">
     <div class="cookies-banner-content">
       <p>
-        Abychom mohli měřit návštěvnost na&nbsp;webu, potřebujeme Váš souhlas
+        Abychom mohli měřit návštěvnost webu, potřebujeme Váš souhlas
         se&nbsp;zpracováním osobních údajů prostřednictvím cookies.
         <a href="/stranka/zasady-zpracovani-osobnich-udaju">Více o&nbsp;zpracování osobních údajů</a>
       </p>
