Plausible.io analytics

--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -12,5 +12,6 @@
 
     <%= javascript_pack_tag 'application'  %>
     <%= render partial: "shared/google_analytics" %>
+    <%= render partial: "shared/plausibleio_analytics" %>
   </body>
 </html>
